# codebook

./: Assist.py  Automated_Vehicle_Log_Pipeline.pptx  README.md
CanSender/: CMakeLists.txt  cansender.cpp  cansender.h  main.cpp
Cluster/: CMakeLists.txt  EngineTemp.qml  FuelGauge.qml  Odometer.qml  RPMGauge.qml  canbusmanager.cpp  canbusmanager.h  clustercontroller.cpp  clustercontroller.h  main.cpp
Cluster/.qtcreator/: CMakeLists.txt.user.15f578b
Digital_Ins_Cluster/digital-instrument-cluster/: CMakeLists.txt  CMakePresets.json  README.md
Digital_Ins_Cluster/digital-instrument-cluster/src/: main.cpp
Digital_Ins_Cluster/digital-instrument-cluster/src/can/: cansimulator.cpp  cansimulator.h  mockcan.cpp  mockcan.h
Digital_Ins_Cluster/digital-instrument-cluster/src/cluster/: fuelgauge.cpp  fuelgauge.h  indicators.cpp  indicators.h  rpmgauge.cpp  rpmgauge.h  speedometer.cpp  speedometer.h
Digital_Ins_Cluster/digital-instrument-cluster/src/qml/: FuelGauge.qml  Indicators.qml  main.qml
Infotainment/: settings.gradle.kts
Infotainment/app/: build.gradle.kts
Infotainment/app/src/main/: AndroidManifest.xml
Infotainment/app/src/main/java/com/example/automotive/: MainActivity.kt  SimpleScreen.kt
Infotainment/app/src/main/java/com/example/automotive/climate/: ClimateScreen.kt
Infotainment/app/src/main/java/com/example/automotive/media/: MediaPlayerState.kt  MediaScreen.kt  MediaViewModel.kt  MyMediaPlayer.kt  PlaylistScreen.kt
Infotainment/app/src/main/java/com/example/automotive/menu/: MainMenuScreen.kt
Infotainment/app/src/main/java/com/example/automotive/navigation/: AppNavGraph.kt  Screen.kt
Infotainment/app/src/main/java/com/example/automotive/navigationapp/: NavigationScreen.kt
Infotainment/app/src/main/java/com/example/automotive/phone/: PhoneScreen.kt
Infotainment/app/src/main/java/com/example/automotive/radio/: RadioScreen.kt
Infotainment/app/src/main/java/com/example/automotive/settings/: SettingsScreen.kt
Infotainment/app/src/main/java/com/example/automotive/ui/theme/: Color.kt  Theme.kt  Type.kt
Infotainment/app/src/main/res/values/: strings.xml  themes.xml
Infotainment/gradle/: libs.versions.toml
Infotainment/gradle/wrapper/: gradle-wrapper.properties
Project1/UntitledProject/: UntitledProject.qmlproject.qtds  UntitledProject.qrc
Project1/UntitledProject/UntitledProjectContent/: App.qml  CMakeLists.txt  MySpeedometer.qml
QT/Age_Calc/: Age_Calc  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
QT/Age_Calc/.qt/: QtDeploySupport.cmake
QT/Age_Calc/Age_Calc_autogen/: deps
QT/Age_Class/: CMakeLists.txt
QT/Age_Class/include/: agecalc.h
QT/Age_Class/source/: agecalc.cpp  main.cpp
QT/Notes/: Build Process.txt
QT/Onlycpp/: CMakeLists.txt
QT/Practice1/untitled/: CMakeLists.txt  person.cpp  person.h  widget.cpp  widget.h  widget.ui
QT/Qt_class/: CMakeLists.txt
QT/Qt_class/include/: animal.h
QT/Qt_class/source/: animal.cpp  main.cpp
QT/dis_conn/include/: radio.h  station.h
QT/dis_conn/source/: main.cpp  radio.cpp  station.cpp
QT/house/: CMakeLists.txt
QT/house/include/: appliance.h  freezer.h  oven.h  toaster.h
QT/house/source/: appliance.cpp  main.cpp
QT/paint_calc/: CMakeLists.txt  main.cpp
QT/qObject_calc/: CMakeLists.txt
QT/qObject_calc/include/: calc.h
QT/qObject_calc/source/: calc.cpp  main.cpp
QT/qt6p1/: main.cpp
QT/qtclass2/: CMakeLists.txt
QT/qtclass2/include/: animal.h  canine.h  feline.h  mammal.h
QT/qtclass2/source/: animal.cpp  canine.cpp  feline.cpp  main.cpp  mammal.cpp
QT/quickProject1/: FuelGauge.qml  Practice.qml  Speedometer.qml
QT/scope_class/: CMakeLists.txt
QT/scope_class/include/: animal.h
QT/scope_class/source/: animal.cpp  main.cpp
QT/sig_conn/: CMakeLists.txt
QT/sig_conn/include/: monitor.h  test.h
QT/sig_conn/source/: main.cpp  monitor.cpp  test.cpp
QT/signal/: CMakeLists.txt
QT/signal/include/: destination.h  source.h
QT/signal/source/: destination.cpp  main.cpp  source.cpp
QT_Projects/qt6p1/: CMakeLists.txt  main.cpp
quickProject1/: CMakeLists.txt  FuelGauge.qml  Indicators.qml  Main.qml  RPMGauge.qml  Trip.qml  main.cpp  qmldir
quickProject1/.qtcreator/: CMakeLists.txt.user.7361f6e
